# segmentation-kit

./: .gitignore  Cargo.toml  README.md
src/: audio_input.rs  julius_input.rs  main.rs  segmentation.rs
