[package]
name = "segmentation-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

julius = { git = "https://github.com/jpreprocess/julius-rs.git", rev = "72da53098529b34751b44eeed9a6d390a4bf0a02" }

clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0"

dasp = { version = "0.11", features = ["all"] }

hound = "3.5.1"

jpreprocess = "0.8.0"
jpreprocess-jpcommon = "0.8.0"
jpreprocess-core = "0.8.0"
